--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepare": "husky install"
   },
   "keywords": [],
   "license": "ISC",
@@ -19,6 +20,8 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-standard": "^5.0.0",
     "git-commit-msg-linter": "^4.7.4",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.1.2",
     "typescript": "^4.9.5"
   }
 }
