feat: ensure RemoteAuthentication calls HttpPostClient with correct URL

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,13 +6,14 @@
     "module": "esnext",
     "moduleResolution": "node",
     "jsx": "react",
-    "rootDir": "src",
+    "rootDirs": ["src", "tests"],
     "baseUrl": "src",
     "allowJs": true,
     "resolveJsonModule": true,
     "paths": {
+      "@/tests/*": ["../tests/*"],
       "@/*": ["*"]
     }
   },
-  "include": ["src"]
+  "include": ["src", "tests"]
 }
