--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "lint-staged": "^13.1.2",
     "ts-jest": "^29.0.5",
     "typescript": "^4.9.5"
+  },
+  "_moduleAliases": {
+    "@": "dist"
   }
 }
