--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
   "keywords": [],
   "license": "ISC",
   "devDependencies": {
+    "@types/faker": "^6.6.9",
     "@types/jest": "^29.4.0",
     "@types/node": "^18.14.1",
     "eslint": "^8.35.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-promise": "^6.1.1",
+    "faker": "^5.5.3",
     "git-commit-msg-linter": "^4.7.4",
     "husky": "^8.0.3",
     "jest": "^29.4.3",
