--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "keywords": [],
   "license": "ISC",
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/faker": "^6.6.9",
     "@types/jest": "^29.4.0",
     "@types/node": "^18.14.1",
@@ -30,5 +31,8 @@
   },
   "_moduleAliases": {
     "@": "dist"
+  },
+  "dependencies": {
+    "axios": "^1.3.4"
   }
 }
