--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@types/faker": "^6.6.9",
     "@types/jest": "^29.4.0",
     "@types/node": "^18.14.1",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
     "eslint": "^8.35.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-promise": "^6.1.1",
@@ -33,6 +35,8 @@
     "@": "dist"
   },
   "dependencies": {
-    "axios": "^1.3.4"
+    "axios": "^1.3.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
