--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "clean-webpack-plugin": "^4.0.0",
+    "css-loader": "^6.7.3",
     "eslint": "^8.35.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-promise": "^6.1.1",
@@ -29,10 +30,15 @@
     "faker": "^5.5.3",
     "git-commit-msg-linter": "^4.7.4",
     "husky": "^8.0.3",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^29.4.3",
     "jest-environment-jsdom": "^29.4.3",
     "lint-staged": "^13.1.2",
+    "node-sass": "^8.0.0",
+    "sass-loader": "^13.2.0",
+    "style-loader": "^3.3.1",
     "ts-jest": "^29.0.5",
+    "ts-loader": "^9.4.2",
     "typescript": "^4.9.5",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
