--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "keywords": [],
   "license": "ISC",
   "devDependencies": {
+    "@testing-library/react": "^14.0.0",
     "@types/axios": "^0.14.0",
     "@types/faker": "^6.6.9",
     "@types/jest": "^29.4.0",
