feat: ensure SurveyItem Component load survey data correct

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "keywords": [],
   "license": "ISC",
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@types/axios": "^0.14.0",
     "@types/faker": "^6.6.9",
