--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index",
     "dev": "webpack-dev-server --open --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
     "test": "jest --passWithNoTests --silent --no-cache --runInBand",
@@ -58,6 +59,7 @@
   },
   "dependencies": {
     "axios": "^1.3.4",
+    "express-history-api-fallback": "^2.2.1",
     "history": "^5.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
