--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.2",
     "faker": "^5.5.3",
+    "favicons-webpack-plugin": "^6.0.0",
     "git-commit-msg-linter": "^4.8.1",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^8.0.3",
